# art-junk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.claude/: settings.local.json
.claude/skills/perceptual-color/: SKILL.md  gamut-mapping.md  oklab.md
.claude/skills/pigment-mixing/: SKILL.md  kubelka-munk.md  latent-space.md
.claude/skills/stylus-input/: SKILL.md  android.md  ios.md  linux.md  macos.md  web.md  windows.md
.github/workflows/: ci.yml
architecture/: README.md  crates.md  dataflow.md  threading.md
crates/aj-app/: Cargo.toml
crates/aj-app/src/: color.rs  compose.rs  gpu.rs  main.rs  shortcuts.rs  ui.rs  viewport.rs
crates/aj-app/src/ui/: brush_panel.rs  color_picker.rs
crates/aj-core/: Cargo.toml
crates/aj-core/src/: input.rs  lib.rs
crates/aj-core/tests/: serde_roundtrip.rs
crates/aj-effects/: Cargo.toml
crates/aj-effects/src/: lib.rs
crates/aj-engine/: Cargo.toml
crates/aj-engine/src/: lib.rs
crates/aj-engine/tests/: history.rs
crates/aj-format/: Cargo.toml
crates/aj-format/src/: lib.rs
crates/aj-render/: Cargo.toml
crates/aj-render/src/: lib.rs
crates/aj-render/src/brush/: mod.rs  ribbon.rs
crates/aj-stylus/: Cargo.toml
crates/aj-stylus/src/: adapter.rs  android_motion.rs  ios_touch.rs  lib.rs  linux_wayland_tablet.rs  linux_x11_tablet.rs  macos_tablet.rs  web_pointer.rs  windows_tablet.rs
crates/aj-stylus/src/adapter/: android.rs  ios.rs  mac.rs  mod.rs  tests_common.rs  wayland.rs  web.rs  windows.rs  x11.rs
crates/aj-stylus/tests/: adapter.rs
crates/stylus-junk/: Cargo.toml
crates/stylus-junk/src/: android_motion.rs  geom.rs  input.rs  kurbo_interop.rs  lib.rs  linux_wayland_tablet.rs  linux_x11_tablet.rs  macos_tablet.rs  web_pointer.rs  windows_tablet.rs  winit_shim.rs
crates/stylus-junk/src/adapter/: android.rs  ios.rs  mac.rs  mod.rs  tests_common.rs  wayland.rs  web.rs  windows.rs  x11.rs
crates/stylus-junk/tests/: primitive_adapter.rs  serde_roundtrip.rs  winit_adapter.rs
tools/aj-convert/: Cargo.toml
tools/aj-convert/src/: main.rs
