[package]
name = "aj-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "art-junk drawing application binary."

[lints]
workspace = true

[dependencies]
aj-core.workspace = true
aj-engine.workspace = true
aj-render.workspace = true

anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
