[package]
name = "aj-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Effect scene-graph nodes and WGSL filter passes for art-junk."

[lints]
workspace = true

[dependencies]
