[package]
name = "aj-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Actor-thread engine, Command/Event plumbing, and snapshot publication for art-junk."

[lints]
workspace = true

[dependencies]
aj-core.workspace = true
arc-swap.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
