[package]
name = "aj-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Actor-thread engine, Command/Event plumbing, and snapshot publication for art-junk."
publish = false

[lints]
workspace = true

[features]
# Passthrough: activates `aj-core/serde` so `DocumentSnapshot` and its
# transitive types derive `Serialize`/`Deserialize`. No engine types
# themselves serialize yet; this feature exists so when they do (history
# preservation, command-log replay) the flag is already in place.
serde = ["dep:serde", "aj-core/serde"]

[dependencies]
aj-core.workspace = true
arc-swap.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
