[package]
name = "aj-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Vello-based rendering pipeline for art-junk scenes."
publish = false

[lints]
workspace = true

[dependencies]
aj-core.workspace = true
anyhow.workspace = true
vello.workspace = true
wgpu.workspace = true
