[package]
name = "aj-stylus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-platform stylus input and palm-rejection abstraction for art-junk."

[lints]
workspace = true

[dependencies]
aj-core.workspace = true
kurbo.workspace = true
winit.workspace = true
log.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSResponder", "NSView", "NSWindow", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSGeometry", "NSThread"] }
block2 = "0.6"
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xinput"] }
raw-window-handle = "0.6"
thiserror.workspace = true
