[package]
name = "aj-stylus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-platform stylus input and palm-rejection abstraction for art-junk."

[lints]
workspace = true

[dependencies]
aj-core.workspace = true
kurbo.workspace = true
winit.workspace = true
log.workspace = true
bitflags.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSResponder", "NSView", "NSWindow", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSGeometry", "NSThread"] }
block2 = "0.6"
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# Wayland-native path (runtime-selected via `RawDisplayHandle::Wayland`).
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
# X11 / XWayland path (runtime-selected via `RawDisplayHandle::Xlib`/`Xcb`).
x11rb = { version = "0.13", features = ["xinput"] }
raw-window-handle = "0.6"
thiserror.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
# `ndk` / `android-activity` are the real MotionEvent source; pulled in
# only on Android to avoid pulling host-irrelevant crates into the mac
# build.
thiserror.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-ui-kit = { version = "0.3", features = [
    "UIResponder",
    "UIView",
    "UIEvent",
    "UITouch",
    "UIApplication",
] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSSet", "NSString"] }
block2 = "0.6"
thiserror.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_System_Performance",
    "Win32_Graphics_Gdi",
] }
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "EventTarget",
    "Event",
    "AddEventListenerOptions",
    "MouseEvent",
    "PointerEvent",
    "DomRect",
] }
thiserror.workspace = true
